bug fixes, change layout on smaller devices

--- a/parka.less
+++ b/parka.less
@@ -25,14 +25,29 @@ body {
 	}
 	.row {
 		margin: 0px;
-		.col-xs-6 {
+		.col-xs-6, .col-sm-12 {
 			padding: 0px;
+		}
+
+		.col-sm-4 {
+			position: absolute;
+			right: 0;
+
+			h2 {
+				display: none;
+
+				@media(min-width: 970px) {
+					display: inherit;
+				}
+			}
 		}
 	}
 }
 
+.list-group {
+	margin-top: 40px;
+}
 #map-canvas {
-	position: absolute !important;
 	width: 100%;
 	height: 100%;
 }
